Added search by product name endpoint / fixed docker-compose.yaml volume path
